--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
         <!-- play-ground start / score -->
         <!-- Final Score -->
-        <section class="score flex justify-center items-center min-h-screen hidden">
+        <section id="score" class="flex justify-center items-center min-h-screen hidden">
             <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
                 <h1 class="text-8xl">
                     <span class="font-extrabold">
@@ -117,7 +117,7 @@
                         14
                     </span>
                 </h1>
-                <button class="btn text-white">Play again</button>
+                <button class="btn text-black">Play again</button>
                 <p>
                     Practice will make you Pro
                 </p>
