--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
         <!-- Final Score -->
         <section id="score" class="flex justify-center items-center min-h-screen hidden">
             <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
+                <h4 class="text-3xl">
+                    Game Over!!
+                </h4>
                 <h1 class="text-8xl">
                     <span class="font-extrabold">
                         Score:
@@ -117,7 +120,7 @@
                         14
                     </span>
                 </h1>
-                <button class="btn text-black">Play again</button>
+                <button onclick="play()" class="btn text-black">Play again</button>
                 <p>
                     Practice will make you Pro
                 </p>
