--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <span class="font-extrabold">
                         Score:
                     </span>
-                    <span>
+                    <span id="final-score">
                         14
                     </span>
                 </h1>
